# TownGeneratorOS

./: .gitignore  GENERATION_LOGIC.md  GENERATION_PROCESS.md  GEOMETRY_COMPARISON.md  MISSING_FEATURES.md  README_PYTHON.md  WARD_COMPARISON.md  debug_generation.py  main.py  pyproject.toml
ref/: ref.json
town_generator/: __init__.py  curtain_wall.py  cutter.py  export.py  graph.py  math_utils.py  model.py  patch.py  point.py  polygon.py  random.py  step_visualizer.py  topology.py  visualize.py  voronoi.py  ward.py
